# advent-haskell-2025

day1/: day1.cabal
day1/app/: Main.hs
day1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day2/: day2.cabal
day2/app/: Main.hs
day2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day3/: AOC2025day3.cabal  CHANGELOG.md
day3/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day3/exe/: Main.hs
day4/: day4.cabal
day4/app/: Main.hs
day4/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day5/: day5.cabal
day5/app/: Main.hs
day5/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day6/: day6.cabal
day6/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day6/exe/: Main.hs
day7/: day7.cabal
day7/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day7/exe/: Main.hs
day8/: day8.cabal
day8/exe/: Arith.hs  Main.hs  Point.hs  Util.hs
day9/: LICENSE  day9.cabal
day9/exe/: Main.hs  Util.hs  Vector.hs
day9/exe/Data/Matrix/: Lens.hs
