cabal-version:      3.0
name:               day4
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rasmus Andreassen
maintainer:         rasmus.andreassen@proton.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day4
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.1.0,
        mtl,
        matrix,
        lens
    hs-source-dirs:   app
    default-language: GHC2024
